--- a/poc/gsl/dashboard/package.json
+++ b/poc/gsl/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "corona-react",
+  "name": "gsl-poc-react",
   "version": "1.1.0",
   "homepage": "http://bootstrapdash.com/demo/corona-react-free/template/demo_1/preview",
   "private": true,
@@ -62,7 +62,7 @@
     "typicons.font": "^2.0.9"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "CHOKIDAR_USEPOLLING=true react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
