--- a/poc/gsl/docker-compose.yml
+++ b/poc/gsl/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - 3000:3000
     environment:
-      AUTH_SERVICE_URL: http://auth:3001
-      DELIVERY_SERVICE_URL: http://deliviery:3002
+      REACT_APP_AUTH_SERVICE_URL: http://localhost:3001
+      REACT_APP_DELIVERY_SERVICE_URL: http://localhost:3002
     volumes:
       - ./dashboard/src:/app/src
